# django-base

./: .gitignore  pyproject.toml  pytest.ini
djangoproject/: settings.py  urls.py
playground/: views.py
